* S05: Minor fixup for this sentence no verb.
git-svn-id: http://svn.pugscode.org/pugs@23761 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1698,7 +1698,7 @@ are simulated in any of various ways, such as by Thompson NFA, it may
 be possible to know when to fire off the assertions without backchecks.)
 
 Ordinary quantifiers and characters classes do not terminate a token pattern.
-Zero-width assertions such as word boundaries also okay.
+Zero-width assertions such as word boundaries are also okay.
 
 Oddly enough, the C<token> keyword specifically does not determine
 the scope of a token, except insofar as a token pattern usually
