--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 20 Feb 2007
+  Last Modified: 6 Mar 2007
   Number: 12
-  Version: 42
+  Version: 43
 
 =head1 Overview
 
@@ -332,18 +332,23 @@ or C<Code> object bound to the variable:
     @keys  = %hash.keys;
     $sig   = &sub.signature;
 
-Use the C<VAR> pseudo-function on a scalar variable to get at its
+Use the prefix C<VAR> macro on a scalar variable to get at its
 underlying C<Scalar> object:
 
     if VAR($scalar).readonly {...}
 
-There's also a corresponding postfix:<VAR> macro that can be used
+C<VAR> is a no-op on a non-scalar variables and values:
+
+    VAR(1);     # 1
+    VAR(@x);    # @x
+
+There's also a corresponding C<< postfix:<.VAR> >> macro that can be used
 as if it were a method:
 
     if $scalar.VAR.readonly {...}
 
 (But since it's a macro, C<VAR> is not dispatched as a real method.
-To dispatch to a real C<.VAR> method use the indirect C<$obj."VAR">
+To dispatch to a real C<.VAR> method, use the indirect C<$obj."VAR">
 form.)
 
 You can also get at the container through the appropriate symbol table:
