the change back from .give to .leave was incomplete as noted by rhr++.
git-svn-id: http://svn.pugscode.org/pugs@23763 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2469,7 +2469,7 @@ it is really a method on this pseudo-object, and
 
 would work just as well.  You can exit any labeled block early by saying
 
-    MyLabel.give(@results);
+    MyLabel.leave(@results);
 
 =item *
 
