--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1629,7 +1629,7 @@ the control logic code of any intermediate block constructs.  With normal
 blocks this can be optimized away to a "goto".  All C<Routine> declarations
 have an explicit declarator such as C<sub> or C<method>; bare blocks and
 "pointy" blocks are never considered to be routines in that sense.  To return
-from a block, use C<give> instead--see below.
+from a block, use C<leave> instead--see below.
 
 The C<return> function preserves its argument list as a C<Capture> object, and
 responds to the left-hand C<Signature> in a binding.  This allows named return
@@ -1775,10 +1775,10 @@ Note that these are equivalent in terms of control flow:
     COUNT.leave;
     last COUNT;
 
-However, the first form explicitly gives the return value for the
+However, the first form explicitly sets the return value for the
 entire loop, while the second implicitly returns all the previous
 successful loop iteration values as a list comprehension.  (It may,
-in fact, be too late to give a return value for the loop if it is
+in fact, be too late to set a return value for the loop if it is
 being evaluated lazily!)  A C<leave>
 from the inner loop block, however, merely specifies the return value for
 that iteration:
