--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 28 Feb 2007
+  Last Modified: 6 Feb 2007
   Number: 2
-  Version: 91
+  Version: 92
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1238,11 +1238,7 @@ signature literal as a postfix operator:
     &foo:(Int,Num)
 
 It still just returns a C<Code> object.  A call may also be partially
-applied by using an argument list literal as a postfix operator:
-
-    &foo\(1,2,3,:mice<blind>)
-
-This is really just a shorthand for
+applied by using the C<.assuming> method:
 
     &foo.assuming(1,2,3,:mice<blind>)
 
@@ -1573,6 +1569,8 @@ variable is "wild carded" into every package.
 
 Standard input is C<$*IN>, standard output is C<$*OUT>, and standard error
 is C<$*ERR>.  The magic command-line input handle is C<$*ARGS>.
+The arguments themselves come in C<@*ARGS>.  See also "Declaring a MAIN
+subroutine" in S06.
 
 =item *
 
@@ -1907,7 +1905,7 @@ following table shows the correspondence to the "fatarrow" notation:
     a => %a             :%a
     a => $$a            :$$a
     a => @$$a           :@$$a (etc.)
-    a => %foo<a>        %foo:<a>
+    a => %foo<a>        %foo<a>:p
 
 Note that as usual the C<{...}> form can indicate either a closure or a hash
 depending on the contents.  It does I<not> indicate a subscript.
@@ -2450,8 +2448,8 @@ Alternately, you can treat a pod stream as a scalar via C<$=DATA>
 or as an array via C<@=DATA>.  Presumably a module could read all
 its COMMENT blocks from C<@=COMMENT>, for instance.  Each chunk of
 pod comes as a separate array element.  You have to split it into lines
-yourself.  Each chunk has a C<.linenum> property that indicates its
-starting line within the source file.
+yourself.  Each chunk has a C<.range> property that indicates its
+line number range within the source file.
 
 The lexical routine itself is C<&?ROUTINE>; you can get its name with
 C<&ROUTINE.name>.  The current block is C<&?BLOCK>.  If the block has a label,
