typo spotted by TimToady++   :/
git-svn-id: http://svn.pugscode.org/pugs@23770 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2533,7 +2533,7 @@ You must instead put the entire heredoc into the C<BEGIN>:
 
 =item *
 
-A version literal are written with a 'v' followed by the version
+A version literal is written with a 'v' followed by the version
 number in dotted form.  This always constructs a C<Version> object, not
 a string.  Only integers are allowed; for anything fancier you must
 coerce a string to a C<Version>:
