--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 1 Nov 2006
+  Last Modified: 8 Mar 2006
   Number: 11
-  Version: 15
+  Version: 16
 
 =head1 Overview
 
@@ -261,22 +261,24 @@ you're really asking for:
 
     use Dog:ver<1.2.1>:auth(Any);
 
-Saying C<1.2.1> specifies an I<exact> match on the version number,
-not a minimum match.  To match more than one version, put a range
-operator in parens:
+Saying C<1.2.1> specifies an I<exact> match on that part of the
+version number, not a minimum match.  To match more than one version,
+put a range operator as a selector in parens:
 
     use Dog:ver(1.2.1..1.2.3);
     use Dog:ver(1.2.1..^1.3);
     use Dog:ver(1.2.1..*);
 
-Subversions are wildcarded, so C<1.2> really means C<1.2.*>.  If you
-say:
+When specifying the version of your own module, C<1.2> is equivalent
+to C<1.2.0>, C<1.2.0.0>, and so on.  However C<use> searches for
+modules matching a version prefix, so the subversions are wildcarded,
+and in this context C<1.2> really means C<1.2.*>.  If you say:
 
     use v6;
 
 which is short for:
 
-    use Perl:ver<6>;
+    use Perl:ver<6.*>;
 
 you're asking for any version of Perl 6.  You need to say something like
 
@@ -333,6 +335,21 @@ parts as short-form arguments.  For instance:
 
     use Whiteness:from<perl5>:name<Acme::Bleach>ver<1.12>:auth<cpan:DCONWAY>;
     use Whiteness:from<perl5 Acme::Bleach 1.12 cpan:DCONWAY>;  # same thing
+
+The string form of a version recognizes the C<*> wildcard in place of any
+position.  It also recognizes a trailing C<+>, so
+
+    :ver<6.2.3+>
+
+is short for
+
+    :ver(v6.2.3 .. v6.2.*)
+
+And saying
+
+    :ver<6.2.0+>
+
+specifically rules out any prereleases.
 
 =head1 Forcing Perl 6
 
