--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 7 Mar 2007
+  Last Modified: 8 Mar 2007
   Number: 3
-  Version: 104
+  Version: 105
 
 =head1 Overview
 
@@ -322,7 +322,7 @@ you do still have to worry about the extension, so you probably want to say
 
 Alternately, you can increment a submatch:
 
-    $filename ~~ s[^.* <(\w+)> \.\w+$] = $().succ;
+    $filename ~~ s[ <( <<\w+>> )> \.\w+$] = $().succ;
 
 Perl 6 also supports C<Str> decrement.
 
